--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,7 +7,7 @@ sonar.exclusions=.properties, Dockerfile, *.md, node_modules/**, coverage/**,*.s
 sonar.language=javascript
 sonar.sourceEncoding=UTF-8
 sonar.dynamicAnalysis="reuseReports"
-sonar.javascript.lcov.reportPaths=./coverage/testFront/lcov.info
+sonar.javascript.lcov.reportPaths=coverage/testFront/lcov.info
 
 
 
