--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,10 +4,10 @@ sonar.projectKey=acalvom_test-front
 sonar.organization=acalvom
 sonar.sources=./src/app/
 sonar.exclusions=.properties, Dockerfile, *.md, node_modules/**, coverage/**,*.sh, configuration.js
-sonar.language=javascript
+sonar.language=typescript
 sonar.sourceEncoding=UTF-8
 sonar.dynamicAnalysis="reuseReports"
-sonar.javascript.lcov.reportPaths=coverage/testFront/lcov.info
+sonar.typescript.lcov.reportPaths=coverage/testFront/lcov.info
 
 
 
