--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,12 +2,17 @@ sonar.projectName=test-front
 sonar.projectVersion=1.0
 sonar.projectKey=acalvom_test-front
 sonar.organization=acalvom
-sonar.sources=./src/app/
-sonar.exclusions=.properties, Dockerfile, *.md, node_modules/**, coverage/**,*.sh, configuration.js
-sonar.language=typescript
+#sonar.sources=./src/app/
 sonar.sourceEncoding=UTF-8
-sonar.dynamicAnalysis="reuseReports"
-sonar.typescript.lcov.reportPaths=coverage/testFront/lcov.info
+#sonar.typescript.lcov.reportPaths=coverage/testFront/lcov.info
+
+sonar.host.url=http://localhost:4200
+
+sonar.sources=src
+sonar.exclusions=**/node_modules/**
+sonar.tests=src
+sonar.test.inclusions=**/*.spec.ts
+sonar.typescript.lcov.reportPaths=coverage/lcov.info
 
 
 
