--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,14 +4,13 @@ sonar.projectKey=acalvom_test-front
 sonar.organization=acalvom
 #sonar.sources=./src/app/
 sonar.sourceEncoding=UTF-8
-sonar.typescript.lcov.reportPaths=coverage/testFront/lcov.info
+sonar.typescript.lcov.reportPaths=./coverage/testFront/lcov.info
 
 sonar.host.url=http://localhost:4200
 
-sonar.sources=src
-sonar.exclusions=**/node_modules/**
-sonar.tests=src
+sonar.sources=sonar.tests=src/app
 sonar.test.inclusions=**/*.spec.ts
+sonar.exclusions=**/node_modules/**,**/*.spec.ts
 
 
 
