--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,13 +2,13 @@ sonar.projectName=test-front
 sonar.projectVersion=1.0
 sonar.projectKey=acalvom_test-front
 sonar.organization=acalvom
-#sonar.sources=./src/app/
+sonar.sources=./src/app/
 sonar.sourceEncoding=UTF-8
-sonar.typescript.lcov.reportPaths=./coverage/testFront/lcov.info
+#sonar.typescript.lcov.reportPaths=./coverage/testFront/lcov.info
 
 sonar.host.url=http://localhost:4200
-
-sonar.sources=sonar.tests=src/app
+#sonar.ts.tslint.configPath=tslint.json
+sonar.ts.coverage.lcovReportPath=./coverage/testFront/lcov.info
 sonar.test.inclusions=**/*.spec.ts
 sonar.exclusions=**/node_modules/**,**/*.spec.ts
 
