--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,12 +5,13 @@ sonar.organization=acalvom
 sonar.sources=./src/app/
 sonar.sourceEncoding=UTF-8
 #sonar.typescript.lcov.reportPaths=./coverage/testFront/lcov.info
+sonar.exclusions=**/node_modules/**/*, **/*.spec.ts, **/*.e2e.ts, **/environments/**/*, **/*.routes.ts, **/main.ts, **/test-setup.ts, **/polyfills.ts
+sonar.typescript.tsconfigPath=tsconfig.json
 
 sonar.host.url=http://localhost:4200
-#sonar.ts.tslint.configPath=tslint.json
+sonar.ts.tslint.configPath=tslint.json
 sonar.ts.coverage.lcovReportPath=./coverage/testFront/lcov.info
 sonar.test.inclusions=**/*.spec.ts
-sonar.exclusions=**/node_modules/**,**/*.spec.ts
 
 
 
