--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,7 +10,7 @@ sonar.typescript.tsconfigPath=tsconfig.json
 
 sonar.host.url=http://localhost:4200
 sonar.ts.tslint.configPath=tslint.json
-sonar.ts.coverage.lcovReportPath=./coverage/testFront/lcov.info
+sonar.ts.coverage.lcovReportPath=../../test-front/coverage/testFront/lcov.info
 sonar.test.inclusions=**/*.spec.ts
 
 
