--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,7 +11,7 @@ sonar.typescript.tsconfigPath=tsconfig.json
 sonar.host.url=http://localhost:4200
 sonar.ts.tslint.configPath=tslint.json
 #sonar.js.coverage.lcovReportPath=../../test-front/coverage/testFront/lcov.info
-sonar.typescript.lcov.reportPaths=coverage/testFront/lcov.info
+sonar.javascript.lcov.reportPaths=coverage/testFront/lcov.info
 
 sonar.test.inclusions=**/*.spec.ts
 
