--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,13 +7,13 @@ sonar.sourceEncoding=UTF-8
 #sonar.typescript.lcov.reportPaths=./coverage/testFront/lcov.info
 sonar.exclusions=**/node_modules/**/*, **/*.spec.ts, **/*.e2e.ts, **/environments/**/*, **/*.routes.ts, **/main.ts, **/test-setup.ts, **/polyfills.ts
 sonar.typescript.tsconfigPath=tsconfig.json
+sonar.test.inclusions=**/*.spec.ts
 
 sonar.host.url=http://localhost:4200
 sonar.ts.tslint.configPath=tslint.json
 #sonar.js.coverage.lcovReportPath=../../test-front/coverage/testFront/lcov.info
-sonar.javascript.lcov.reportPaths=coverage/testFront/lcov.info
+sonar.typescript.lcov.reportPaths=test-front/coverage/testFront/lcov.info
 
-sonar.test.inclusions=**/*.spec.ts
 
 
 
