--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,7 +12,7 @@ sonar.test.inclusions=**/*.spec.ts
 sonar.host.url=http://localhost:4200
 sonar.ts.tslint.configPath=tslint.json
 #sonar.js.coverage.lcovReportPath=../../test-front/coverage/testFront/lcov.info
-sonar.typescript.lcov.reportPaths=./coverage/testFront/lcov.info
+sonar.typescript.lcov.reportPaths=./coverage/lcov.info
 
 
 
