--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,7 @@ speed-measure-plugin*.json
 # misc
 /.sass-cache
 /connect.lock
-/coverage
+/coverage/src
 /libpeerconnection.log
 npm-debug.log
 yarn-error.log
