--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,15 +4,12 @@ sonar.projectKey=acalvom_test-front
 sonar.organization=acalvom
 sonar.sources=./src/app/
 sonar.sourceEncoding=UTF-8
-#sonar.typescript.lcov.reportPaths=./coverage/testFront/lcov.info
 sonar.exclusions=**/node_modules/**/*, **/*.spec.ts, **/*.e2e.ts, **/environments/**/*, **/*.routes.ts, **/main.ts, **/test-setup.ts, **/polyfills.ts
 sonar.typescript.tsconfigPath=tsconfig.json
 sonar.test.inclusions=**/*.spec.ts
-
 sonar.host.url=http://localhost:4200
 sonar.ts.tslint.configPath=tslint.json
-#sonar.js.coverage.lcovReportPath=../../test-front/coverage/testFront/lcov.info
-sonar.typescript.lcov.reportPaths=./coverage/lcov.info
+sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 
 
 
