--- a/package.json
+++ b/package.json
@@ -2,15 +2,12 @@
   "name": "test-front",
   "version": "0.0.0",
   "scripts": {
+    "heroku-postbuild": "ng build --prod",
     "ng": "ng",
     "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "coverage": "ng test --code-coverage",
-    "heroku-postbuild": "ng build --prod",
-    "build-prod": "ng build --prod"
+    "coverage": "ng test --code-coverage"
   },
   "engines": {
     "node": "~14.15.0",
@@ -19,10 +16,10 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.0.0",
-    "@angular/cli": "~11.0.1",
+    "@angular/cli": "~12.0.3",
     "@angular/common": "~11.0.0",
     "@angular/compiler": "~11.0.0",
-    "@angular/compiler-cli": "~11.0.0",
+    "@angular/compiler-cli": "~12.0.3",
     "@angular/core": "~11.0.0",
     "@angular/forms": "~11.0.0",
     "@angular/platform-browser": "~11.0.0",
@@ -32,11 +29,13 @@
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "typescript": "~4.0.2",
+    "typescript": "~4.2.3",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.1",
+    "@angular/cli": "~12.0.3",
+    "@angular/compiler-cli": "~12.0.3",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
@@ -49,6 +48,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0"
+    "tslint": "~6.1.0",
+    "typescript": "~4.2.3"
   }
 }
