--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.0.0",
-    "@angular/cli": "~12.0.3",
+    "@angular/cli": "~11.0.1",
     "@angular/common": "~11.0.0",
     "@angular/compiler": "~11.0.0",
-    "@angular/compiler-cli": "~12.0.3",
+    "@angular/compiler-cli": "~11.0.0",
     "@angular/core": "~11.0.0",
     "@angular/forms": "~11.0.0",
     "@angular/platform-browser": "~11.0.0",
@@ -29,13 +29,11 @@
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "typescript": "~4.2.3",
+    "typescript": "~4.0.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.1",
-    "@angular/cli": "~12.0.3",
-    "@angular/compiler-cli": "~12.0.3",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
@@ -49,6 +47,8 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.2.3"
+    "@angular/compiler": "~11.0.0",
+    "@angular/compiler-cli": "~11.0.0",
+    "typescript": "~4.0.2"
   }
 }
