--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "test-front",
   "version": "0.0.0",
   "scripts": {
-    "heroku-postbuild": "cd src && npm install --only=dev && npm install && npm run build-prod",
+    "heroku-postbuild": "ng build --prod",
     "build-prod": "ng build --prod",
     "ng": "ng",
     "start": "node server.js",
